@@ -196,20 +196,20 @@ def possibly_open_file(f, mode='wb'):
         g.close()
 
 
-class PoolWrapper(object):
+class MapWrapper(object):
     """
-    Wrapper for working with objects that have map-like methods, such as
-    `multiprocessing.Pool`. Used for parallelisation.
+    Parallelisation wrapper for working with map-like callables, such as
+    `multiprocessing.Pool.map`.
 
     Parameters
     ----------
-    pool : int or map-like object
-        If `pool` is an `int` then it specifies the number of threads to
-        use for parallelization. If `int(pool) in [0, 1]`, then no parallel
-        processing is used and the map builtin is used. If `pool == -1` then
-        the pool will utilise all available CPU.
-        If pool is an object with a map method that follows the same
-        calling sequence as the built-in map function, then this pool is
+    pool : int or map-like callable
+        If `pool` is an integer, then it specifies the number of threads to
+        use for parallelization. If ``int(pool) == 1``, then no parallel
+        processing is used and the map builtin is used.
+        If ``pool == -1``, then the pool will utilise all available CPUs.
+        If `pool` is a map-like callable that follows the same
+        calling sequence as the built-in map function, then this callable is
         used for parallelisation.
     """
     def __init__(self, pool=-1):
@@ -217,9 +217,9 @@ class PoolWrapper(object):
         self._mapfunc = map
         self._own_pool = False
 
-        if hasattr(pool, 'map'):
+        if callable(pool):
             self.pool = pool
-            self._mapfunc = self.pool.map
+            self._mapfunc = self.pool
         else:
             # user supplies a number
             if int(pool) == -1:
